e implementó un agente de Q-learning para Connect Four usando una red neuronal que, mediante self-play y actualización basada en diferencias temporales, ajusta sus Q-values y permite fine tuning de hiperparámetros

--- a/Laboratorio07/lab7.ipynb
+++ b/Laboratorio07/lab7.ipynb
@@ -44,24 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python312\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Humano vs IA\n",
-      "2. IA vs IA\n",
-      "Opción no válida.\n"
+      "Ajuste de parámetros del algoritmo TD Learning\n",
+      "Nuevos parámetros:\n",
+      "ALPHA = 0.005, GAMMA = 0.9, EPSILON = 1.0, EPSILON_DECAY = 0.995\n"
      ]
     }
    ],
@@ -78,8 +70,8 @@
     "COLUMN_COUNT = 7\n",
     "EMPTY = 0\n",
     "\n",
-    "# Parámetros del Q-learning\n",
-    "ALPHA = 0.001       # Tasa de aprendizaje para la red (usado en el optimizador)\n",
+    "# Parámetros del Q-learning (valores por defecto)\n",
+    "ALPHA = 0.001       # Tasa de aprendizaje (para el optimizador de la red)\n",
     "GAMMA = 0.95        # Factor de descuento\n",
     "EPSILON = 1.0       # Tasa de exploración inicial\n",
     "EPSILON_MIN = 0.1   # Valor mínimo de epsilon\n",
@@ -98,13 +90,11 @@
     "    model.compile(loss='mse', optimizer=optimizers.Adam(learning_rate=ALPHA))\n",
     "    return model\n",
     "\n",
-    "# Inicializamos el modelo globalmente\n",
-    "q_model = build_model()\n",
+    "q_model = build_model()  # Modelo global\n",
     "\n",
     "# ---------------- Funciones del juego ---------------- #\n",
     "def create_board():\n",
-    "    board = [[EMPTY for _ in range(COLUMN_COUNT)] for _ in range(ROW_COUNT)]\n",
-    "    return board\n",
+    "    return [[EMPTY for _ in range(COLUMN_COUNT)] for _ in range(ROW_COUNT)]\n",
     "\n",
     "def drop_piece(board, row, col, piece):\n",
     "    board[row][col] = piece\n",
@@ -169,11 +159,11 @@
     "    return []\n",
     "\n",
     "def get_valid_locations(board):\n",
-    "    valid_locations = []\n",
+    "    valid = []\n",
     "    for col in range(COLUMN_COUNT):\n",
     "        if is_valid_location(board, col):\n",
-    "            valid_locations.append(col)\n",
-    "    return valid_locations\n",
+    "            valid.append(col)\n",
+    "    return valid\n",
     "\n",
     "def is_terminal_node(board):\n",
     "    return winning_move(board, 1) or winning_move(board, 2) or len(get_valid_locations(board)) == 0\n",
@@ -197,159 +187,160 @@
     "            else:\n",
     "                row_str += str(cell) + \" \"\n",
     "        print(row_str)\n",
-    "    print(\"\")  # Salto de línea\n",
+    "    print(\"\")\n",
     "\n",
     "# ---------------- Agente TD Learning con Modelo ---------------- #\n",
-    "\n",
     "def choose_action(state, board, epsilon):\n",
     "    \"\"\"\n",
-    "    Selecciona una acción usando política ε-greedy.\n",
-    "    Si random < epsilon, elige acción aleatoria de entre las válidas.\n",
-    "    De lo contrario, elige la acción con mayor Q-value entre las válidas.\n",
+    "    Selecciona una acción usando política ε-greedy:\n",
+    "      - Con probabilidad epsilon, elige una acción aleatoria de las válidas.\n",
+    "      - Con probabilidad (1 - epsilon), elige la acción con mayor Q-value (filtrado por válidas).\n",
     "    \"\"\"\n",
     "    valid_actions = get_valid_locations(board)\n",
     "    if np.random.rand() < epsilon:\n",
     "        return random.choice(valid_actions)\n",
-    "    # Predecir Q-values con el modelo\n",
     "    state_input = state.reshape(1, INPUT_SIZE)\n",
     "    q_values = q_model.predict(state_input, verbose=0)[0]\n",
-    "    # Filtrar Q-values solo para acciones válidas\n",
     "    q_valid = {action: q_values[action] for action in valid_actions}\n",
     "    return max(q_valid, key=q_valid.get)\n",
     "\n",
     "def update_Q(state, action, reward, next_state, done):\n",
     "    \"\"\"\n",
-    "    Actualiza el modelo (red neuronal) usando un paso de Q-learning.\n",
-    "    Calcula el target para la acción tomada y realiza una actualización.\n",
+    "    Actualiza el modelo usando un paso de Q-learning:\n",
+    "      - Calcula el target Q-value para la acción tomada.\n",
+    "      - Entrena la red para minimizar el error entre el Q-value predicho y el target.\n",
     "    \"\"\"\n",
     "    state_input = state.reshape(1, INPUT_SIZE)\n",
     "    next_state_input = next_state.reshape(1, INPUT_SIZE)\n",
-    "    # Predicción actual de Q(s, :)\n",
     "    q_values = q_model.predict(state_input, verbose=0)\n",
-    "    # Predicción de Q(s', :)\n",
     "    q_next = q_model.predict(next_state_input, verbose=0)\n",
     "    target = q_values.copy()\n",
     "    if done:\n",
     "        target[0][action] = reward\n",
     "    else:\n",
     "        target[0][action] = reward + GAMMA * np.max(q_next)\n",
-    "    # Entrenamiento de la red para ajustar el Q-value de la acción tomada\n",
     "    q_model.fit(state_input, target, epochs=1, verbose=0)\n",
     "\n",
-    "# ---------------- Flujo de Juego ---------------- #\n",
+    "# ---------------- Ciclo de Entrenamiento ---------------- #\n",
+    "def train_agent(episodes):\n",
+    "    global EPSILON, current_board\n",
+    "    for ep in range(episodes):\n",
+    "        board = create_board()\n",
+    "        current_board = board\n",
+    "        game_over = False\n",
+    "        turn = 0\n",
+    "        total_reward = 0\n",
+    "        while not game_over:\n",
+    "            state = get_state_one_hot(board)\n",
+    "            valid_actions = get_valid_locations(board)\n",
+    "            if len(valid_actions) == 0:\n",
+    "                game_over = True\n",
+    "                break\n",
+    "            # En self-play, ambos jugadores usan la misma política.\n",
+    "            action = choose_action(state, board, EPSILON)\n",
+    "            row = get_next_open_row(board, action)\n",
+    "            # Alterna turno: turno 0 -> pieza 1, turno 1 -> pieza 2\n",
+    "            piece = 1 if turn == 0 else 2\n",
+    "            drop_piece(board, row, action, piece)\n",
+    "            # Estructura de recompensas:\n",
+    "            # Si gana: +100 para la pieza 2 (agente) y -100 para la pieza 1.\n",
+    "            # Si es empate: 0.\n",
+    "            # Si no termina: -1 por movimiento.\n",
+    "            if winning_move(board, piece):\n",
+    "                reward = 100 if piece == 2 else -100\n",
+    "                game_over = True\n",
+    "            elif is_terminal_node(board):\n",
+    "                reward = 0\n",
+    "                game_over = True\n",
+    "            else:\n",
+    "                reward = -1\n",
+    "            total_reward += reward\n",
+    "            next_state = get_state_one_hot(board)\n",
+    "            update_Q(state, action, reward, next_state, game_over)\n",
+    "            turn = (turn + 1) % 2\n",
+    "            current_board = board\n",
+    "        if EPSILON > EPSILON_MIN:\n",
+    "            EPSILON *= EPSILON_DECAY\n",
+    "        print(f\"Episode {ep+1}/{episodes} - Total Reward: {total_reward} - Epsilon: {EPSILON:.3f}\")\n",
     "\n",
-    "# Variable global para acceder al tablero actual en choose_action\n",
-    "current_board = None\n",
+    "# ---------------- Fine Tuning ---------------- #\n",
+    "def fine_tuning():\n",
+    "    global ALPHA, GAMMA, EPSILON, EPSILON_DECAY, q_model\n",
+    "    print(\"Ajuste de parámetros del algoritmo TD Learning\")\n",
+    "    new_alpha = input(f\"Ingrese la tasa de aprendizaje (ALPHA) actual ({ALPHA}): \").strip()\n",
+    "    if new_alpha != \"\":\n",
+    "        ALPHA = float(new_alpha)\n",
+    "        # Reconstruir el modelo con el nuevo ALPHA\n",
+    "        q_model = build_model()\n",
+    "    new_gamma = input(f\"Ingrese el factor de descuento (GAMMA) actual ({GAMMA}): \").strip()\n",
+    "    if new_gamma != \"\":\n",
+    "        GAMMA = float(new_gamma)\n",
+    "    new_epsilon = input(f\"Ingrese la tasa de exploración (EPSILON) actual ({EPSILON}): \").strip()\n",
+    "    if new_epsilon != \"\":\n",
+    "        EPSILON = float(new_epsilon)\n",
+    "    new_decay = input(f\"Ingrese el factor de decaimiento (EPSILON_DECAY) actual ({EPSILON_DECAY}): \").strip()\n",
+    "    if new_decay != \"\":\n",
+    "        EPSILON_DECAY = float(new_decay)\n",
+    "    print(\"Nuevos parámetros:\")\n",
+    "    print(f\"ALPHA = {ALPHA}, GAMMA = {GAMMA}, EPSILON = {EPSILON}, EPSILON_DECAY = {EPSILON_DECAY}\")\n",
     "\n",
-    "def iniciar_juego(mode=\"human_vs_ai\", depth=4, episodes=1):\n",
-    "    global current_board, EPSILON\n",
+    "# ---------------- Modo de Evaluación: Jugar contra el agente entrenado ---------------- #\n",
+    "def play_game():\n",
     "    board = create_board()\n",
-    "    current_board = board\n",
     "    game_over = False\n",
     "    turn = 0\n",
     "    print_board(board)\n",
     "    while not game_over:\n",
-    "        if mode == \"human_vs_ai\":\n",
-    "            if turn == 0:\n",
-    "                # Turno del humano\n",
-    "                valid_cols = get_valid_locations(board)\n",
-    "                col = -1\n",
-    "                while col not in valid_cols:\n",
-    "                    try:\n",
-    "                        col = int(input(f\"Col (0-{COLUMN_COUNT-1}): \"))\n",
-    "                        if col not in valid_cols:\n",
-    "                            print(\"No válido, intente otra vez.\")\n",
-    "                    except ValueError:\n",
-    "                        print(\"Entrada inválida.\")\n",
-    "                row = get_next_open_row(board, col)\n",
-    "                drop_piece(board, row, col, 1)\n",
-    "                if winning_move(board, 1):\n",
-    "                    winning_pos = get_winning_positions(board, 1)\n",
-    "                    print_board(board, winning_pos)\n",
-    "                    print(\"¡Ganaste!\")\n",
-    "                    game_over = True\n",
-    "                else:\n",
-    "                    print_board(board)\n",
-    "            else:\n",
-    "                # Turno de la IA con TD Learning\n",
-    "                print(\"IA pensando (TD Learning)...\")\n",
-    "                state = get_state_one_hot(board)\n",
-    "                col = choose_action(state, board, EPSILON)\n",
-    "                if col not in get_valid_locations(board):\n",
-    "                    col = random.choice(get_valid_locations(board))\n",
-    "                row = get_next_open_row(board, col)\n",
-    "                drop_piece(board, row, col, 2)\n",
-    "                \n",
-    "                if winning_move(board, 2):\n",
-    "                    reward = 100\n",
-    "                    game_over = True\n",
-    "                elif is_terminal_node(board):\n",
-    "                    reward = 0\n",
-    "                    game_over = True\n",
-    "                else:\n",
-    "                    reward = -1\n",
-    "                \n",
-    "                next_state = get_state_one_hot(board)\n",
-    "                update_Q(state, col, reward, next_state, game_over)\n",
-    "                \n",
-    "                if winning_move(board, 2):\n",
-    "                    winning_pos = get_winning_positions(board, 2)\n",
-    "                    print_board(board, winning_pos)\n",
-    "                    print(\"IA gana.\")\n",
-    "                else:\n",
-    "                    print_board(board)\n",
-    "                \n",
-    "                # Decaimiento de epsilon\n",
-    "                if EPSILON > EPSILON_MIN:\n",
-    "                    EPSILON *= EPSILON_DECAY\n",
-    "                \n",
-    "            turn = (turn + 1) % 2\n",
-    "            current_board = board\n",
-    "        elif mode == \"ai_vs_ai\":\n",
-    "            # Conservamos el modo IA vs IA con minimax (no modificado aquí)\n",
-    "            if turn == 0:\n",
-    "                print(\"IA sin poda...\")\n",
-    "                use_pruning = False\n",
-    "                col, score = minimax(board, depth, -math.inf, math.inf, True, 1, use_pruning)\n",
-    "                piece = 1\n",
-    "            else:\n",
-    "                print(\"IA con poda...\")\n",
-    "                use_pruning = True\n",
-    "                col, score = minimax(board, depth, -math.inf, math.inf, True, 2, use_pruning)\n",
-    "                piece = 2\n",
-    "            if col is None:\n",
-    "                print(\"Empate!\")\n",
+    "        if turn == 0:\n",
+    "            valid_cols = get_valid_locations(board)\n",
+    "            col = -1\n",
+    "            while col not in valid_cols:\n",
+    "                try:\n",
+    "                    col = int(input(f\"Col (0-{COLUMN_COUNT-1}): \"))\n",
+    "                    if col not in valid_cols:\n",
+    "                        print(\"No válido, intente otra vez.\")\n",
+    "                except ValueError:\n",
+    "                    print(\"Entrada inválida.\")\n",
+    "            row = get_next_open_row(board, col)\n",
+    "            drop_piece(board, row, col, 1)\n",
+    "            if winning_move(board, 1):\n",
+    "                winning_pos = get_winning_positions(board, 1)\n",
+    "                print_board(board, winning_pos)\n",
+    "                print(\"¡Ganaste!\")\n",
     "                game_over = True\n",
     "            else:\n",
-    "                row = get_next_open_row(board, col)\n",
-    "                drop_piece(board, row, col, piece)\n",
-    "                if winning_move(board, piece):\n",
-    "                    winning_pos = get_winning_positions(board, piece)\n",
-    "                    print_board(board, winning_pos)\n",
-    "                    if turn == 0:\n",
-    "                        print(\"IA sin poda gana!\")\n",
-    "                    else:\n",
-    "                        print(\"IA con poda gana!\")\n",
-    "                    game_over = True\n",
-    "                else:\n",
-    "                    print_board(board)\n",
-    "            turn = (turn + 1) % 2\n",
+    "                print_board(board)\n",
     "        else:\n",
-    "            print(\"Modo no válido.\")\n",
-    "            break\n",
+    "            state = get_state_one_hot(board)\n",
+    "            col = choose_action(state, board, 0.0)  # Sin exploración\n",
+    "            if col not in get_valid_locations(board):\n",
+    "                col = random.choice(get_valid_locations(board))\n",
+    "            row = get_next_open_row(board, col)\n",
+    "            drop_piece(board, row, col, 2)\n",
+    "            if winning_move(board, 2):\n",
+    "                winning_pos = get_winning_positions(board, 2)\n",
+    "                print_board(board, winning_pos)\n",
+    "                print(\"IA gana.\")\n",
+    "                game_over = True\n",
+    "            else:\n",
+    "                print_board(board)\n",
+    "        turn = (turn + 1) % 2\n",
     "\n",
+    "# ---------------- Opciones de Ejecución ---------------- #\n",
     "def ejecutar():\n",
-    "    print(\"1. Humano vs IA\")\n",
-    "    print(\"2. IA vs IA\")\n",
-    "    mode_input = input(\"Elija 1 o 2: \")\n",
-    "    if mode_input == \"1\":\n",
-    "        print(\"Modo: Humano vs IA\")\n",
-    "        iniciar_juego(mode=\"human_vs_ai\")\n",
-    "    elif mode_input == \"2\":\n",
-    "        print(\"Modo: IA vs IA\")\n",
-    "        iniciar_juego(mode=\"ai_vs_ai\")\n",
+    "    mode_input = input(\"Elija 'train' para entrenamiento, 'play' para jugar, o 'tune' para ajustar parámetros: \").strip().lower()\n",
+    "    if mode_input == \"train\":\n",
+    "        episodes = int(input(\"Ingrese el número de episodios para entrenar: \"))\n",
+    "        train_agent(episodes)\n",
+    "    elif mode_input == \"play\":\n",
+    "        play_game()\n",
+    "    elif mode_input == \"tune\":\n",
+    "        fine_tuning()\n",
     "    else:\n",
     "        print(\"Opción no válida.\")\n",
+    "\n",
+    "# Variable global para acceso al tablero actual en choose_action (solo para este ejemplo)\n",
+    "current_board = None\n",
     "\n",
     "ejecutar()\n"
    ]
