--- a/Laboratorio07/lab7.ipynb
+++ b/Laboratorio07/lab7.ipynb
@@ -25,6 +25,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://youtu.be/_S88p7s_oBw\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# TASK 1"
    ]
   },
@@ -623,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -641,6 +648,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Opción no válida. Intente de nuevo.\n",
+      "=== Connect 4 con TD Learning ===\n",
+      "1. Entrenar agente\n",
+      "2. Evaluar agente automáticamente\n",
+      "3. Ajustar parámetros\n",
+      "4. Salir\n",
       "¡Hasta luego!\n"
      ]
     }
