FEAT: add validation to ensure students have exams on different days

--- a/Laboratorio08/lab8.ipynb
+++ b/Laboratorio08/lab8.ipynb
@@ -136,6 +136,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Las siguientes funciones servirán para poder ver que los estudiantes cumplen con la reestriccion que todos los exámenes tienen que hacerse en días diferentes, ningún estudiante tenga más de un examen por día y que los estudiantes que toman el mismo curso no tengan exámenes el mismo día.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_solution(assignment):\n",
+    "    # Verifica que cada examen esté asignado a un día válido.\n",
+    "    for exam, day in assignment.items():\n",
+    "        if day not in days:\n",
+    "            return False, f\"El examen {exam} se asignó a un día inválido: {day}\"\n",
+    "\n",
+    "    # Para cada estudiante, se construye su horario y se verifica que no tenga más de un examen por día.\n",
+    "    student_schedule = {}\n",
+    "    for exam, day in assignment.items():\n",
+    "        for student in enrollment[exam]:\n",
+    "            if student not in student_schedule:\n",
+    "                student_schedule[student] = []\n",
+    "            student_schedule[student].append((exam, day))\n",
+    "\n",
+    "    for student, exam_days in student_schedule.items():\n",
+    "        day_count = {}\n",
+    "        for exam, day in exam_days:\n",
+    "            day_count[day] = day_count.get(day, 0) + 1\n",
+    "        for day, count in day_count.items():\n",
+    "            if count > 1:\n",
+    "                return (\n",
+    "                    False,\n",
+    "                    f\"El estudiante {student} tiene {count} exámenes el día {day}.\",\n",
+    "                )\n",
+    "\n",
+    "    return True, \"La solución cumple todas las restricciones.\"\n",
+    "\n",
+    "\n",
+    "def display_student_schedule(assignment):\n",
+    "    # Se construye un diccionario que mapea cada estudiante a sus (examen, día)\n",
+    "    student_schedule = {}\n",
+    "    for exam, day in assignment.items():\n",
+    "        for student in enrollment[exam]:\n",
+    "            student_schedule.setdefault(student, []).append((exam, day))\n",
+    "\n",
+    "    # Se imprime el horario de cada estudiante\n",
+    "    print(\"Horarios de exámenes por estudiante:\")\n",
+    "    for student, exam_days in student_schedule.items():\n",
+    "        print(f\"Estudiante {student}:\")\n",
+    "        # Se puede ordenar por día si se desea, utilizando un orden definido.\n",
+    "        day_order = {\"Lunes\": 1, \"Martes\": 2, \"Miércoles\": 3}\n",
+    "        exam_days.sort(key=lambda x: day_order[x[1]])\n",
+    "        for exam, day in exam_days:\n",
+    "            print(f\"  - {exam}: {day}\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Referencias:\n",
     "\n",
     "- GeeksforGeeks. (2024, 12 junio). Explain the Concept of Backtracking Search and Its Role in Finding Solutions to CSPs. GeeksforGeeks. https://www.geeksforgeeks.org/explain-the-concept-of-backtracking-search-and-its-role-in-finding-solutions-to-csps/\n",
